# comfy-cli

./: pyproject.toml
.github/workflows/: build-and-test.yml  ep01-01a-single-sheet.yml  publish_package.yml  pytest.yml  recover-segmind-ep04-page02.yml  ruff_check.yml  run-on-gpu.yml  seedance-video.yml  segmind-ep01-scenes-01-12-test.yml  segmind-ep01-scenes-13-48.yml  segmind-ep02-05.yml  segmind-ep02-consistency-test.yml  segmind-ep04-page02-retry.yml  segmind-remaining-15-visual-only.yml  segmind-storyboard-video.yml  test-mac.yml  test-windows.yml
comfy_cli/: cmdline.py  comfy_client.py  config_manager.py  constants.py  discovery.py  error_codes.py  help_json.py  http.py  tracking.py  utils.py  uv.py  where.py  workspace_manager.py
comfy_cli/bench/: README.md  __init__.py  run_arm_b.py  tasks.json
comfy_cli/bench/fixtures/: edit_session_seed.json  object_info.json  txt2img_seed.json
comfy_cli/cloud/: oauth.py
comfy_cli/command/: install.py  jobs.py  launch.py  nodes.py  run.py  transfer.py  workflow.py  workflow_fragments.py
comfy_cli/command/generate/: __init__.py  app.py  client.py  output.py  poll.py  schema.py  spec.py
comfy_cli/command/generate/spec/: openapi.yml
comfy_cli/command/run/: __init__.py
comfy_cli/cql/: default_workflow.py  engine.py  loader.py
comfy_cli/cql/data/: default_text2img.json
comfy_cli/output/: branding.py  glyphs.py  renderer.py
comfy_cli/schemas/: logs.json
storyboard-tests/: ep01-scenes-01-12-status.json  ep01-scenes-01-12.b64  ep01-scenes-13-24-status.json  ep01-scenes-13-24.b64  ep01-scenes-13-48.run  ep01-scenes-25-36-status.json  ep01-scenes-25-36.b64  ep01-scenes-37-48-status.json  ep01-scenes-37-48.b64  ep02-05-prompts.json  ep02-05-visual-only-prompts.json  ep02-05.run  ep02-page01-consistency-status.json  ep02-page01-consistency.run  ep02-page01-status.json  ep02-page01.b64  ep02-page02-status.json  ep02-page02-visual-only-status.json  ep02-page02.b64  ep02-page03-status.json  ep02-page03-visual-only-status.json  ep02-page03.b64  ep02-page04-status.json  ep02-page04-visual-only-status.json  ep02-page04.b64  ep03-page01-status.json  ep03-page01-visual-only-status.json  ep03-page01.b64  ep03-page02-status.json  ep03-page02-visual-only-status.json  ep03-page02.b64  ep03-page03-status.json  ep03-page03-visual-only-status.json  ep03-page03.b64  ep03-page04-status.json  ep03-page04-visual-only-status.json  ep03-page04.b64  ep04-page01-status.json  ep04-page01-visual-only-status.json  ep04-page01.b64  (+24 more)
storyboard-tests/ep01-current/: 01A-storyboard.jpeg.b64  RUN_EP01_01A.txt
tests/comfy_cli/: test_config_manager.py  test_http.py  test_install_python_resolution.py  test_tracking.py  test_tracking_providers.py
tests/comfy_cli/auth/: test_where.py
tests/comfy_cli/bench/: test_run_arm_b.py
tests/comfy_cli/command/: test_command.py  test_launch_background.py  test_logs.py  test_run.py  test_run_prompt.py  test_transfer_download.py  test_transfer_upload.py
tests/comfy_cli/cql/: test_default_workflow.py
tests/comfy_cli/jobs/: test_jobs.py
tests/comfy_cli/output/: test_discovery.py
tests/uv/: test_uv.py
(+6 files in other folders)
