[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "comfy-cli"
version = "0.0.0"                                            # Will be filled in by the CI/CD pipeline. Check publish_package.py.
description = "A CLI tool for installing and using ComfyUI."
readme = "README.md"
keywords = [ "comfyui", "stable diffusion" ]

license = { text = "GPL-3.0-only" }
maintainers = [
  { name = "Yoland Yan", email = "yoland@drip.art" },
  { name = "James Kwon", email = "hongilkwon316@gmail.com" },
  { name = "Robin Huang", email = "robin@drip.art" },
  { name = "Dr.Lt.Data", email = "dr.lt.data@gmail.com" },
]

requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "charset-normalizer>=3",
  "cookiecutter",
  "gitpython>=3.1.50",
  "httpx",
  "mixpanel",
  "packaging",
  "pathspec",
  "posthog>=6,<8",
  "psutil",
  "pyyaml",
  "questionary",
  "requests",
  "rich",
  "ruff",
  "semver~=3.0.2",
  "tomlkit",
  "typer>=0.12.5",
  "typing-extensions>=4.7",
  "uv>=0.11.15",

  "websocket-client",
]

# `bench` — the BE-2302 arm-B micro-edit benchmark runner (comfy_cli/bench). Only a
# live run needs the Anthropic SDK; the offline `--dry-run` + unit tests are stub-only.
optional-dependencies.bench = [ "anthropic>=0.40" ]
optional-dependencies.dev = [ "jsonschema", "pre-commit", "pytest", "pytest-cov", "ruff" ]
optional-dependencies.preview = [ "term-image>=0.7,<0.8" ]
urls.Repository = "https://github.com/Comfy-Org/comfy-cli.git"
scripts.comfy = "comfy_cli.__main__:main"
scripts.comfy-cli = "comfy_cli.__main__:main"
scripts.comfycli = "comfy_cli.__main__:main"

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "comfy_cli*" ]

[tool.setuptools.package-data]
# Bundled skills: subdirs of comfy_cli.skills named after each skill (kept in
# sync with BUNDLED_SKILLS). Hyphenated dirs aren't importable packages, so
# they're plain data dirs matched by glob from the parent package.
"comfy_cli.skills" = [ "*/SKILL.md" ]
"comfy_cli.schemas" = [ "*.json", "*.md" ]

"comfy_cli.cql.data" = [ "*.yaml", "*.json" ]
"comfy_cli.command.generate" = [ "spec/openapi.yml" ]
# Bench task matrix + offline object_info / seed-workflow fixtures.
"comfy_cli.bench" = [ "tasks.json", "fixtures/*.json" ]

[tool.ruff]
target-version = "py310"

line-length = 120
lint.select = [
  "E",      # pycodestyle - Error
  "F",      # default
  "I",      # isort-like behavior (import statement sorting)
  "Q",      # flake8-quotes
  "RET504", # Unnecessary assignment to {name} before return statement
  "UP",     # pyupgrade
  "W",      # pycodestyle - Warning
]
lint.extend-ignore = [
  "E501", # Line too long
]
